openshift/collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: riptide-collector
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: riptide-collector
    app.kubernetes.io/component: collector
  ports:
    - name: http
      port: 80
      targetPort: http
